Signup page Added

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,8 @@
   --light_white: #838383;
   --light_black: #424242;
 
+  --light_black_200: #767676;
+
   --ff_Nunito: "Nunito";
 
   --constant_white: #ffffff;
