--- a/src/pages/ForgotPassword/ForgotPassword.module.css
+++ b/src/pages/ForgotPassword/ForgotPassword.module.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   padding: 10px;
+  width: 100%;
 }
 @media screen and (min-width: 600px) {
   .main_layout {
@@ -20,14 +21,40 @@
   }
 }
 
-.title_card {
-  margin-top: 20px;
+.sub_layout {
+  width: 100%;
+  max-width: 400px;
+}
+
+.back_login_card {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+  margin-top: 30px;
+  cursor: pointer;
+}
+
+.back_login_text {
+  color: var(--light_black);
+  font-size: 15px;
+  font-weight: 500;
 }
 
 .title {
   font-family: var(--ff_Nunito);
   font-weight: 700;
-  font-size: 55px;
+  font-size: 40px;
+}
+@media screen and (min-width: 600px) {
+  .title {
+    font-size: 50px;
+  }
+}
+@media screen and (min-width: 900px) {
+  .title {
+    font-size: 55px;
+  }
 }
 
 .paragraph {
@@ -35,21 +62,41 @@
   font-family: var(--ff_Nunito);
   font-size: 15px;
   font-weight: 400;
+  max-width: 500px;
 }
 
 .form_card {
   margin-top: 40px;
 }
 
-.form_button_card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 50px;
-  gap: 20px;
+.email_label {
+  font-family: var(--ff_Nunito);
+  color: var(--black);
+  font-size: 14px;
+  font-weight: 600;
+  /* margin-bottom: px; */
 }
 
-.login_button {
+.email_input {
+  font-family: var(--ff_Nunito);
+  color: var(--black);
+  font-size: 14px;
+  height: 40px;
+  width: 100%;
+  border-radius: 7px;
+  border-style: solid;
+  border-color: var(--primary_border);
+  border-width: 1px;
+  margin-bottom: 20px;
+  padding: 15px;
+  outline: none;
+  font-family: var(--ff_Nunito);
+  color: var(--light_black);
+  font-size: 14px;
+  font-weight: 600;
+}
+
+.send_btn {
   height: 45px;
   width: 100%;
   border-style: none;
@@ -60,26 +107,14 @@
   font-size: 15px;
   font-weight: 700;
   cursor: pointer;
-}
-
-.forgot_button {
-  height: 45px;
-  width: 100%;
-  border-style: none;
-  border-radius: 6px;
-  background-color: var(--primary_card_bg);
-  color: var(--black);
-  font-family: var(--ff_Nunito);
-  font-size: 15px;
-  font-weight: 700;
-  cursor: pointer;
+  margin-top: 20px;
 }
 
 .signup_text_card {
   height: fit-content;
   width: 100%;
   position: relative;
-  top: 90px;
+  top: 150px;
 }
 
 .signup_text {
@@ -92,9 +127,5 @@
 
 .signup_text > span {
   color: var(--primary_accent);
-  cursor: pointer;
-}
-
-.eye_icon {
   cursor: pointer;
 }
