--- a/src/pages/PersonalDetails/PersonalDetails.module.css
+++ b/src/pages/PersonalDetails/PersonalDetails.module.css
@@ -25,3 +25,60 @@
   width: 100%;
   max-width: 400px;
 }
+
+.timeline_card {
+  margin-top: 30px;
+  width: 100%;
+}
+
+.title {
+  color: var(--black);
+  font-family: var(--ff_Nunito);
+  font-weight: 800;
+  font-size: 40px;
+}
+@media screen and (min-width: 600px) {
+  .title {
+    font-size: 50px;
+  }
+}
+@media screen and (min-width: 900px) {
+  .title {
+    font-size: 51px;
+  }
+}
+
+.paragraph {
+  color: var(--light_black);
+  font-family: var(--ff_Nunito);
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.form_card {
+}
+
+.bottom_text_card {
+  height: fit-content;
+  width: 100%;
+  position: relative;
+  top: 40px;
+}
+@media screen and (min-width: 900px) {
+  .bottom_text_card {
+    top: 20px;
+  }
+}
+
+.bottom_text {
+  color: var(--black);
+  font-family: var(--ff_Nunito);
+  font-size: 15px;
+  font-weight: 500;
+  text-align: center;
+}
+
+.bottom_text > span {
+  color: var(--primary_accent);
+  cursor: pointer;
+}
