--- a/src/components/Form/PrimaryForm/PrimaryForm.module.css
+++ b/src/components/Form/PrimaryForm/PrimaryForm.module.css
@@ -87,3 +87,11 @@
   gap: 30px;
   margin-top: 50px;
 }
+
+.error_message {
+  color: var(--danger);
+  font-family: var(--ff_Nunito);
+  font-size: 15px;
+  font-weight: 500;
+  height: 5px;
+}
