meal form added

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
   --third_card_bg: #ff6f0014;
 
   --primary_border: #cbcbcb;
+  --primary_border_200: #cbcbcb76;
   --secondary_border: #dddddd;
 
   --success: #52b963;
