--- a/src/pages/Personal/Home/PersonalHome.module.css
+++ b/src/pages/Personal/Home/PersonalHome.module.css
@@ -82,12 +82,14 @@
 .restaurant_card {
   height: 100%;
   width: 100%;
+  list-style-type: none;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
   gap: 20px;
+  padding: 0px;
 }
 @media screen and (min-width: 900px) {
   .restaurant_card {
